--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-movie-search",
+  "homepage": "https://austenbaker.github.io/TMDb-React-Client/",
   "version": "0.1.0",
   "main": "server/build/index.js",
   "private": true,
@@ -15,6 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
